<resources>
    <string name="app_name">LBSRES</string>
    <string name="app_title">Add Service</string>

    <string name="action_delete_all">Delete All Geofences</string>

    <!-- Dialogs -->
    <string name="AreYouSure">Are you sure?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Add">Add</string>
    <string name="Cancel">Cancel</string>

    <!-- Button -->
    <string name="Button.DeleteGeofence">DELETE</string>

    <!-- Labels -->
    <string name="Label.Name">Name</string>
    <string name="Label.Latitude">Latitude</string>
    <string name="Label.Longitude">Longitude</string>
    <string name="Label.Radius">Radius</string>
    <string name="Label.AddGeofence">Add a Geofence</string>
    <string name="Label.EmptyState">You haven\'t created any geofences yet. Tap the plus button to create one.\n\n\nWill we ever get there?! :]</string>

    <!-- Hints -->
    <string name="Hint.Name">Name for the geofence</string>
    <string name="Hint.Latitude" formatted="false">Latitude (%3.1f\u00B0 to %3.1f\u00B0)</string>
    <string name="Hint.Longitude" formatted="false">Longitude (%4.1f\u00B0 to %4.1f\u00B0) </string>
    <string name="Hint.Radius" formatted="false">Radius (%3.2f to %3.1f km)</string>

    <!-- Units -->
    <string name="Units.Degrees">\u00B0</string>
    <string name="Units.Kilometers">km</string>

    <!-- Notification -->
    <string name="Notification.Title">Central Rama3</string>
    <string name="Notification.Text">Central Rama3 has promotion !!!</string>

    <!-- Toast -->
    <string name="Toast.Validation">Please enter valid data for all fields</string>
    <string name="Toast.Error">There was an error. Please try again.</string>

    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_activity_design">ActivityDesign</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_menu">MenuActivity</string>

    <!-- Toast -->
    <string name="login_title">RAMA3</string>
    <string name="username_title">Username</string>
    <string name="password_title">Password</string>
    <string name="password_confirm_title">Confirm Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="register">New User? Register here</string>
    <string name="change_password">change password</string>
    <string name="login_error_message">Username or Password is incorrect.</string>
    <string name="register_error_message">Register failed, Try again!</string>
    <string name="register_password_error">Password does not match</string>
    <string name="register_success">Register Successful</string>
    <string name="new_password">new password</string>
    <string name="welcome_message">Welcome!!</string>
    <string name="welcome_error_message">error message</string>
    <string name="say_hi">Hi</string>
    <string name="change_password_message">Success</string>

</resources>
