<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/username"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFF"
            android:hint="@string/username_title"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/password"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFF"
            android:inputType="textPassword"
            android:hint="@string/password_title"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:id="@+id/confirm_password"
            android:textColor="#ffffff"
            android:textColorHint="#FFFFFF"
            android:inputType="textPassword"
            android:hint="Re-password"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button_register"
            android:background="#49000000"
            android:textColor="#ffffff"
            android:text="@string/button_register"
            android:textSize="18sp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logo2"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>